# camara

./: .gitignore  Dockerfile  Readme.md  camara.py  camara_udp.py  camera.py  capture_photo.py  fpr.py  main.py  push_test.py  pyproject.toml  temp.py  test.py
Detection/: detect_draw.py  img_show.py  main.py  pyproject.toml
Detection/car_recognition/: main.py  pyproject.toml  vedio_process.py
Detection/car_recognition/car_recognition/: CharNeuralNet.py  PlateDetector.py  PlateNeuralNet.py  __init__.py  config_CarDetector.py
Detection/denoise/: main_test_scunet_color_gaussian.py  main_test_scunet_gray_gaussian.py  main_test_scunet_real_application.py  predict.py
Detection/denoise/models/: network_scunet.py
Detection/denoise/utils/: utils_image.py  utils_logger.py  utils_model.py
Detection/human_detect/: main.py  pyproject.toml  requirements.txt
Detection/human_detect/human_detect/: __init__.py  config_HumanDetector.py  detect.py  utils.py
Detection/human_face_recognition/: main.py  pyproject.toml  requirements.txt
Detection/human_face_recognition/human_face_recognition/: __init__.py  face_detect.py
Detection/model/: camera.py  main.py  pyproject.toml  requirements.txt
Detection/model/data/coordinates/test/: fall01.txt  fall02.txt  img.txt  lay01.txt  sit02.txt  sit03.txt  sit04.txt  stand.txt  stand02.txt
Detection/model/data/coordinates/total/climb/: 00002.txt  00004.txt  00006.txt  00007.txt  00009.txt  00012.txt  00018.txt  00019.txt  00020.txt  00022.txt  00023.txt  00024.txt  00025.txt  00027.txt  00028.txt  00029.txt  00030.txt  00031.txt  00033.txt  00034.txt  00037.txt  00041.txt  00044.txt  00045.txt  00047.txt  00048.txt  00049.txt  00050.txt  00051.txt  00055.txt  00056.txt  00057.txt  00058.txt  00060.txt  00061.txt  00064.txt  00065.txt  00066.txt  00068.txt  00070.txt  (+71 more)
Detection/model/data/coordinates/total/people fall down/: 00001.txt  00002.txt  00003.txt  00004.txt  00005.txt  00006.txt  00007.txt  00008.txt  00010.txt  00013.txt  00014.txt  00015.txt  00016.txt  00018.txt  00019.txt  00020.txt  00021.txt  00022.txt  00024.txt  00026.txt  00027.txt  00028.txt  00029.txt  00032.txt  00034.txt  00037.txt  00038.txt  00040.txt  00041.txt  00042.txt  00043.txt  00045.txt  00047.txt  00048.txt  00049.txt  00050.txt  00051.txt  00054.txt  00055.txt  00059.txt  (+89 more)
Detection/model/data/coordinates/total/people lay down/: 00001.txt  00002.txt  00003.txt  00004.txt  00007.txt  00009.txt  00010.txt  00011.txt  00016.txt  00017.txt  00021.txt  00022.txt  00023.txt  00024.txt  00025.txt  00029.txt  00030.txt  00034.txt  00037.txt  00038.txt  00039.txt  00041.txt  00044.txt  00046.txt  00047.txt  00048.txt  00050.txt  00051.txt  00052.txt  00053.txt  00058.txt  00059.txt  00060.txt  00062.txt  00064.txt  00065.txt  00067.txt  00068.txt  00069.txt  (+80 more)
Detection/model/model/: __init__.py  config_ActionDetector.py  dataset.py  network.py  predict.py  skl_read.py  train.py  utils.py
Detection/model/model_pretrained/: best_pose_cnn_model.pth
Detection/skl_detect/: main.py  pyproject.toml  requirements.txt  skl_table
Detection/skl_detect/skl_detect/: __init__.py  skl_detect.py
(+275 files in other folders)
