[tool.poetry]
name = "car-recognition"
version = "0.1.0"
description = "car plate recognition(every car, high pixal)"
authors = ["Veinsure <35186851@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
