[project]
name = "human_detect"
version = "0.1.0"
description = "YOLOv8-based human detector using Ultralytics"
authors = [
    {name = "Veinsure Lee", email = "35186851@qq.com"}
]
dependencies = [
    "ultralytics",
    "opencv-python"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
