[tool.poetry]
name = "human-face-recognition"
version = "0.1.0"
description = "human face recognition by face_recognize"
authors = ["Veinsure <35186851@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
