[tool.poetry]
name = "model"
version = "0.1.0"
description = "human action detect(by using skelon detect and CNN train model)"
authors = ["Veinsure <35186851@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
